Cleanup - Jalopy and IDEA tweaks.